--- a/css/style.css
+++ b/css/style.css
@@ -385,11 +385,20 @@ a.header__logo:hover {
    }
 }
 @media (max-width:320px){
+   h1{
+      font-size: 34px;
+   }
    .info-main{
-      grid-template: minmax(auto, 99px) minmax(auto, 520px) minmax(auto, 122px) / minmax(auto, 425px);
+      grid-template: minmax(auto, 99px) minmax(auto, 150px) minmax(auto, 122px) / minmax(auto, 425px);
    }
    .info-main__buttons a:not(:last-child){
       margin-bottom: 10px;
+   }
+   .achievments__number {
+      font-size: 26px;
+   }
+   .sub-title h2{
+      font-size: 26px;
    }
 }
 
